--- a/public/Bitacora/Bitacora.html
+++ b/public/Bitacora/Bitacora.html
@@ -82,7 +82,4 @@ window.addEventListener(`resize`, setupCallout);
               querySelector: '.mermaid'
             })
           });
-          </script><script src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">
-          const socket = new WebSocket('ws://localhost:3001')
-          socket.addEventListener('message', () => document.location.reload())
-        </script><script src="../postscript.js" type="module"></script></html>
+          </script><script src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/contrib/copy-tex.min.js" type="application/javascript"></script><script src="../postscript.js" type="module"></script></html>
